@@ -37,6 +37,7 @@
 #define GCERR_A_INFINITIVE_REQUIRED 14
 #define GCERR_MA_INFINITIVE_REQUIRED 15
 #define GCERR_MISPLACED_SIDESANA 16
+#define GCERR_MISSING_MAIN_VERB 17
 
 namespace libvoikko {
 
