@@ -25,7 +25,7 @@ Se on vaan niin.
  [code=1, level=0, descr="", stpos=0, len=10, suggs={"Se on vain"}]
 Lause , jossa on pilkun edellä turha väli.
  [code=3, level=0, descr="", stpos=5, len=2, suggs={","}]
-Lause,, jossa kaksi peräkkäistä pilkkua.
+Lause,, jossa on kaksi peräkkäistä pilkkua.
  [code=4, level=0, descr="", stpos=5, len=2, suggs={","}]
 Aurinko paistaa. (Tämä virke on suluissa.)
 Lause., jossa pilkun edellä piste.
@@ -177,6 +177,11 @@ Terrorismia ei pidä koskaan yrittää saada laantumaan, vaan terrorismi on voit
 Kissa juoksee Lahnajärven jäällä.
 Menen kotiin, kunhan.
  [code=16, level=0, descr="", stpos=14, len=6, suggs={}]
+Minä juoksema nopeasti.
+ [code=17, level=0, descr="", stpos=0, len=23, suggs={}]
+Minä juoksen nopeasti. Sinä juoksema nopeasti. Hän juoksee nopeasti.
+ [code=17, level=0, descr="", stpos=23, len=23, suggs={}]
+Pertti juo mm. mustaa, tulikuumaa kahvia.
 
 {voikko.setAcceptTitlesInGc(True)}
 Hieno toka otsikko
