@@ -1,3 +1,6 @@
+2011-11-25 Harri Pitkänen <hatapitk@iki.fi>
+	* Add grammar check for missing main verb.
+
 2011-11-18 Harri Pitkänen <hatapitk@iki.fi>
 	* Increase initial heap size to a value that is more reasonable
 	  for our Finnish morphology.
